[package]
name = "neutron-star-test"
version = "0.1.0"
authors = ["earlz <earlz@earlz.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# this lets you use `cargo fix`!
[[bin]]
name = "neutron-star-test"
test = false
bench = false

[dependencies]
neutron-star-rt = { path = "../neutron-star-rt" }
neutron-star = { path = "../neutron-star" }
panic-halt = "0.2.0"